--- a/index.html
+++ b/index.html
@@ -232,7 +232,7 @@
                 <div class="option-icon">
                     <i class="fas fa-cog"></i>
                 </div>
-                <h3 class="option-title">App Settings Support</h3>
+                <h3 class="option-title">App Support</h3>
                 <p>Open the app and navigate to <strong>Settings → Support & Safety</strong> to report technical issues, fraud, or suspicious content.</p>
             </div>
             
@@ -278,8 +278,6 @@
                         <option value="" disabled selected>Select an issue category</option>
                         <option value="technical">Technical Issue</option>
                         <option value="account">Account Problem</option>
-                        <option value="order">Order Inquiry</option>
-                        <option value="payment">Payment Issue</option>
                         <option value="fraud">Fraud or Suspicious Content</option>
                         <option value="other">Other</option>
                     </select>
